# HP-Motor

./: .gitignore  CHANGELOG.md  DEVELOPMENT_RULES.md  README.md  README.txt  STEP12_PHASE_TAGGER_MVP.py  STEP14_BRIEF_V2_RENDER.py  app.py  cdl_models.py  hp_guardrail_cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py  tatus -sb
(src/visual/: registry.yaml)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main.yml  registry_audit.yml
apps_streamlit/: hp_motor_app.py
canon/: index.yaml  metric_ontology.json  registry.json
config/: hp_motor_system.json
engine/: analysis.py  analyst.py  claim_engine.py  orchestrator.py  popper_core.py  processor.py  registry.py  signal_processor.py  validator.py
hp_motor/: cli.py  data_gateway.py  pipeline.py  schema.py  tests_smoke.py
hp_motor.egg-info/: SOURCES.txt  requires.txt
scripts/: intake_run.py
tests/: test_data_gateway.py  test_metric_validation.py  test_narrative_smoke.py  test_player_role_fit_e2e.py  test_segmentation_smoke.py  test_smoke.py  test_smoke_imports.py
tools/: _root.py  build_registry.py  build_vendor_mappings.py  dashboard_city_gs.py  enrich_registry_definitions.py  extract_report_pages.py  fix_registry_missing_defs.py  import_drive_bundle.py  ingest_reports.py  inspect_reports_index.py  make_goal_timing_profiles.py  make_summaries.py  phase_city_gs.py  phase_city_gs_v3.py  phase_city_gs_v4.py  phase_city_gs_v6.py  release_reports.sh  report_tables_catalog.py  run_city_gs_all.py  run_reports_pipeline.py  suggest_polarity_city_gs.py
(+117 files in other folders)
